dnl Camille is a portable C++ API to stat(2).
dnl Copyright (C) 2000  Tom Vaughan
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Stat.cpp)
AM_INIT_AUTOMAKE(camille, 0.0.1)
AM_CONFIG_HEADER(include/configStat.h)
AM_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_CXX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(string.h sys/stat.h sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_TM

dnl Checks for library functions.

AC_XPCOM
AC_OUTPUT(Makefile include/Makefile src/Makefile test/Makefile xpcom/Makefile)
